--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
 			<artifactId>java-client</artifactId>
 			<version>4.1.2</version>
 		</dependency>
+		
+		<dependency>
+		   <groupId>io.github.bonigarcia</groupId>
+		   <artifactId>webdrivermanager</artifactId>
+		    <version>3.2.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
